[change] - hotel facilities converter in Java 8++ style - optimized code